--- a/_variables.scss
+++ b/_variables.scss
@@ -8,6 +8,7 @@ $accent2: rgba(246, 247, 146, 0.9);
 $grey-sidebar: rgba(51, 55, 69, 0.9);
 $text-dark: #000;
 $text-light: #fff;
+$dark-purple: #8a007e;
 $background-color1: #D9F0FF;
 $background-color2: #427AA1;
 $background-color3: #064789;
@@ -20,7 +21,9 @@ $sun-color: #FFCD19;
 $cloud-color: #fff;
 $fish-color: #FF4C00;
 $bubble-color: #379FBD;
+$red-text-shadow: #ee0000;
 $text-body-size: 20px;
+$text-area-width: 40em;
 $heading1-size: 2.75rem;
 $heading2-size: 2rem;
 $heading3-size: 2.25rem;
@@ -29,4 +32,4 @@ $heading-sidebar-size: 1.25rem;
 $sidebar-font-size: 0.8rem;
 $underline-border-light: rgba(255, 255, 255, 0.5);
 $underline-border-dark: rgba(0, 0, 0, 0.5);
-$wide-screen-width: 1000px;
+$wide-screen-width: 816px;
