--- a/_molecules.css
+++ b/_molecules.css
@@ -50,11 +50,23 @@ a {
   border-bottom: 1px solid rgba(0, 0, 0, 0.5);
   color: #000;
   text-decoration: none;
-  transition: border-color 0.2s ease-in-out;
+  transition: border-color 1s ease-in-out;
+  transition: border-width 0.5s ease-in-out;
 }
 
 a:hover {
-  border-color: #ea2e49;
+  border-color: #8a007e;
+  border-width: 3px;
+}
+
+ul li {
+  list-style: none;
+  background-size: 1em;
+  background-repeat: no-repeat;
+  background-position: left 0.15em;
+  background-image: url("images/starfish.svg");
+  padding-left: 20px;
+  text-indent: 2em hanging;
 }
 
 [role=banner] {
@@ -96,45 +108,88 @@ a:hover {
   border-radius: 50%;
 }
 
+.intro p, .summary p, .preamble p, .explanation p, .participation p, .benefits p, .requirements p, .intro h3, .summary h3, .preamble h3, .explanation h3, .participation h3, .benefits h3, .requirements h3, footer {
+  width: 40em;
+  margin: 0 auto;
+}
+
+.sidebar .wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  max-width: 40em;
+  margin: 0 auto;
+  -moz-column-gap: 1em;
+       column-gap: 1em;
+}
+.sidebar .wrapper ul {
+  padding-left: 1em;
+}
+
 .intro {
-  background-color: #D9F0FF;
+  background: linear-gradient(to bottom, #D9F0FF, 90%, #719fbe, #427AA1);
   color: #000;
+  margin: 0;
+  padding: 1em;
 }
 .intro a {
   color: #000;
   border-bottom: 1px solid rgba(0, 0, 0, 0.5);
   text-decoration: none;
-  transition: border-color 0.2s ease-in-out;
+  transition: border-color 1s ease-in-out, border-width 0.5s ease-in-out, text-shadow 1s ease-out;
 }
 .intro a:hover {
-  border-color: #ea2e49;
+  border-color: #8a007e;
+  border-width: 3px;
+  text-shadow: 3px -3px 0.75em #FF4C00;
+}
+
+section.intro::before {
+  content: "";
+  width: 100%;
+  height: 500px;
+  display: inline-block;
+  position: absolute;
+  background-image: url("images/cloud.svg");
+  background-position: top 0px right 60px;
+  background-size: 250px 250px;
+  background-repeat: no-repeat;
+}
+
+header[role=banner]::before {
+  content: "";
+  width: 100%;
+  height: 500px;
+  display: inline-block;
+  position: absolute;
+  background-image: url("images/cloud.svg");
+  background-position: top 240px left 240px;
+  background-size: 250px 250px;
+  background-repeat: no-repeat;
 }
 
 .main > div, .main > footer {
   padding: 1em;
 }
 
-.summary {
-  background-color: #D9F0FF;
-}
 .summary p:last-child {
-  border-top: 1px solid #ea2e49;
+  border-top: 2px solid #FFCD19;
   margin-top: 1em;
-  padding-top: 1.5em;
+  padding-top: 1em;
 }
 
 .preamble, .explanation {
-  background-color: #D9F0FF;
   color: #000;
 }
 .preamble a, .explanation a {
   color: #000;
   border-bottom: 1px solid rgba(0, 0, 0, 0.5);
   text-decoration: none;
-  transition: border-color 0.2s ease-in-out;
+  transition: border-color 1s ease-in-out, border-width 0.5s ease-in-out, text-shadow 1s ease-out;
 }
 .preamble a:hover, .explanation a:hover {
-  border-color: #ea2e49;
+  border-color: #8a007e;
+  border-width: 3px;
+  text-shadow: 3px -3px 0.75em #FF4C00;
 }
 .preamble h3, .explanation h3 {
   color: #000;
@@ -148,6 +203,43 @@ a:hover {
   border-radius: 1em;
 }
 
+.preamble {
+  margin-top: 2em;
+}
+
+.preamble p, .participation p, .benefits p, .requirements p, footer a, aside h3, aside li {
+  position: relative;
+  z-index: 2;
+}
+
+div.preamble::before {
+  content: "";
+  width: 100%;
+  height: 450px;
+  display: inline-block;
+  position: absolute;
+  background-image: url("images/sailboat.svg");
+  background-position: left 0 top 240px;
+  background-size: 150px 150px;
+  background-repeat: no-repeat;
+}
+
+.explanation {
+  background-color: #427AA1;
+  color: #fff;
+}
+.explanation a {
+  color: #fff;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  text-decoration: none;
+  transition: border-color 1s ease-in-out, border-width 0.5s ease-in-out, text-shadow 1s ease-out;
+}
+.explanation a:hover {
+  border-color: #8a007e;
+  border-width: 3px;
+  text-shadow: 3px -3px 0.75em #ee0000;
+}
+
 .participation, .benefits {
   background-color: #427AA1;
   color: #fff;
@@ -156,10 +248,12 @@ a:hover {
   color: #fff;
   border-bottom: 1px solid rgba(255, 255, 255, 0.5);
   text-decoration: none;
-  transition: border-color 0.2s ease-in-out;
+  transition: border-color 1s ease-in-out, border-width 0.5s ease-in-out, text-shadow 1s ease-out;
 }
 .participation a:hover, .benefits a:hover {
-  border-color: #ea2e49;
+  border-color: #8a007e;
+  border-width: 3px;
+  text-shadow: 3px -3px 0.75em #ee0000;
 }
 .participation h3, .benefits h3 {
   color: #000;
@@ -173,18 +267,65 @@ a:hover {
   border-radius: 1em;
 }
 
+.participation {
+  background: linear-gradient(to bottom, #427AA1, 50%, #1b5992);
+}
+
+div.participation::before {
+  content: "";
+  width: 100%;
+  height: 300px;
+  display: inline-block;
+  position: absolute;
+  background-image: url("images/bubbles-right.svg");
+  background-position: top right 20px;
+  background-size: 200px 300px;
+  background-repeat: no-repeat;
+}
+
+.benefits {
+  background: linear-gradient(to bottom, #1b5992, 50%, #064789);
+}
+
+div.benefits::before {
+  content: "";
+  width: 100%;
+  height: 400px;
+  display: inline-block;
+  position: absolute;
+  background-image: url("images/bubbles-left.svg");
+  background-position: left 0 top 0;
+  background-size: 200px 300px;
+  background-repeat: no-repeat;
+}
+
+div.benefits::after {
+  content: "";
+  width: 100%;
+  height: 500px;
+  display: inline-block;
+  position: absolute;
+  background-image: url("images/fish-dark.svg");
+  background-position: right 60px top 250px;
+  background-size: 200px 200px;
+  background-repeat: no-repeat;
+  z-index: 1;
+}
+
 .requirements {
-  background-color: #064789;
+  background: linear-gradient(to bottom, #064789, 70%, #064789, #FFD6BA);
   color: #fff;
 }
 .requirements a {
   color: #fff;
   border-bottom: 1px solid rgba(255, 255, 255, 0.5);
   text-decoration: none;
-  transition: border-color 0.2s ease-in-out;
+  transition: border-color 1s ease-in-out, border-width 0.5s ease-in-out, text-shadow 1s ease-out;
 }
 .requirements a:hover {
-  border-color: #ea2e49;
+  border-color: #FFCD19;
+  border-width: 3px;
+  text-shadow: 3px -3px 0.75em #FFCD19;
 }
 .requirements h3 {
   color: #000;
@@ -198,22 +339,46 @@ a:hover {
   border-radius: 0.5em;
 }
 .requirements [role=contentinfo] {
-  background-color: #FFD6BA;
-  color: #000;
-  margin-left: -1em;
-  margin-right: -1em;
+  color: #8a007e;
+  text-shadow: 3px -3px 0.75em #ffffff;
   margin-bottom: -1em;
   margin-top: 1em;
   padding: 1em;
+  font-weight: bold;
 }
 .requirements [role=contentinfo] a {
-  color: #000;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+  color: #8a007e;
+  border-bottom: 1px solid #8a007e;
   text-decoration: none;
-  transition: border-color 0.2s ease-in-out;
+  transition: border-color 1s ease-in-out, border-width 0.5s ease-in-out, text-shadow 1s ease-out;
 }
 .requirements [role=contentinfo] a:hover {
-  border-color: #ea2e49;
+  border-color: #8a007e;
+  border-width: 3px;
+  text-shadow: 3px -3px 0.75em #FFCD19;
+}
+.requirements::before {
+  content: "";
+  width: 100%;
+  height: 800px;
+  display: inline-block;
+  position: absolute;
+  background-image: url("images/sand-castle-dark.svg");
+  background-position-x: center;
+  background-position-y: 630px;
+  background-size: 200px 200px;
+  background-repeat: no-repeat;
+}
+.requirements::after {
+  content: "";
+  width: 100%;
+  height: 200px;
+  display: inline-block;
+  position: absolute;
+  background-image: url("images/starfish.svg");
+  background-position: right 50px top;
+  background-size: 150px 150px;
+  background-repeat: no-repeat;
 }
 
 footer {
@@ -224,10 +389,12 @@ footer a {
   color: #000;
   border-bottom: 1px solid rgba(0, 0, 0, 0.5);
   text-decoration: none;
-  transition: border-color 0.2s ease-in-out;
+  transition: border-color 1s ease-in-out, border-width 0.5s ease-in-out, text-shadow 1s ease-out;
 }
 footer a:hover {
-  border-color: #ea2e49;
+  border-color: #8a007e;
+  border-width: 3px;
+  text-shadow: 3px -3px 0.75em #FF4C00;
 }
 
 .sidebar {
@@ -240,16 +407,13 @@ footer a:hover {
   color: #000;
   border-bottom: 1px solid rgba(0, 0, 0, 0.5);
   text-decoration: none;
-  transition: border-color 0.2s ease-in-out;
+  transition: border-color 1s ease-in-out, border-width 0.5s ease-in-out, text-shadow 1s ease-out;
 }
 .sidebar a:hover {
-  border-color: #ea2e49;
+  border-color: #8a007e;
+  border-width: 3px;
+  text-shadow: 3px -3px 0.75em #FF4C00;
 }
 .sidebar h3 {
   font-size: 1.25rem;
-}
-@media (min-width: 1000px) {
-  .sidebar {
-    background-color: #D9F0FF;
-  }
 }
