--- a/_molecules.scss
+++ b/_molecules.scss
@@ -25,9 +25,60 @@
     border-radius: 50%;
   }
 }
+.intro p, .summary p, .preamble p, .explanation p, .participation p, .benefits p, .requirements p, .intro h3, .summary h3, .preamble h3, .explanation h3, .participation h3, .benefits h3, .requirements h3, footer {
+  width: $text-area-width;
+  margin: 0 auto;
+}
+// .design-selection h3, .design-archives h3, .zen-resources h3 {
+//   text-align: center;
+// }
+// .design-selection ul, .design-archives ul, .zen-resources ul {
+//   margin: 0 auto;
+//   padding-left: 0;
+//   & li {
+//     margin: 0 auto;
+//     padding-left: 0;
+//     text-align: center;
+//   }
+// }
+.sidebar .wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  max-width: 40em;
+  margin: 0 auto;
+  column-gap: 1em;
+  ul {
+    padding-left: 1em;
+  }
+}
 .intro {
-  background-color: $background-color1;
+  // background-color: $background-color1;
+  background: linear-gradient(to bottom, $background-color1, 90%, #719fbe, $background-color2);
   @include atoms.set-font-colors($text-dark, $underline-border-dark);
+  margin: 0;
+  padding: 1em;
+}
+section.intro::before {
+  content: "";
+  width: 100%;
+  height: 500px;
+  display: inline-block;
+  position: absolute;
+  background-image: url("images/cloud.svg");
+  background-position: top 0px right 60px;
+  background-size: 250px 250px;
+  background-repeat: no-repeat;
+}
+header[role="banner"]::before {
+  content: "";
+  width: 100%;
+  height: 500px;
+  display: inline-block;
+  position: absolute;
+  background-image: url("images/cloud.svg");
+  background-position: top 240px left 240px;
+  background-size: 250px 250px;
+  background-repeat: no-repeat;
 }
 .main>div, .main>footer {
   padding: 1em;
@@ -35,41 +86,133 @@
 .summary {
   // @include atoms.uppercase($text-dark);
   p:last-child {
-    @include atoms.divider;
+    @include atoms.divider($sun-color);
+
   }
-  background-color: #D9F0FF;
+  // background-color: #D9F0FF;
 }
 .preamble, .explanation {
-  background-color: $background-color1;
+  // background-color: $background-color1;
+  // background: linear-gradient(to bottom, $background-color1, 90%, $background-color2);
   @include atoms.set-font-colors($text-dark, $underline-border-dark);
   h3 {
     @include atoms.section-heading($heading-background-color1);
     border-radius: 1em;
   }
 }
+.preamble {
+  margin-top: 2em;
+//   background: linear-gradient(to bottom, $background-color1, 75%, #719fbe, $background-color2);
+}
+.preamble p, .participation p, .benefits p, .requirements p, footer a, aside h3, aside li {
+  position: relative;
+  z-index: 2;
+}
+div.preamble::before {
+  content: "";
+  width: 100%;
+  height: 450px;
+  display: inline-block;
+  position: absolute;
+  background-image: url("images/sailboat.svg");
+  background-position: left 0 top 240px;
+  background-size: 150px 150px;
+  background-repeat: no-repeat;
+}
+.explanation {
+  background-color: $background-color2;
+  // background: linear-gradient(to bottom, $background-color2, 75%, #1b5992);
+  @include atoms.set-font-colors($text-light, $underline-border-light, $red-text-shadow);
+}
 .participation, .benefits {
   background-color: $background-color2;
-  @include atoms.set-font-colors($text-light, $underline-border-light);
+  @include atoms.set-font-colors($text-light, $underline-border-light, $red-text-shadow, $sun-color);
   h3 {
     @include atoms.section-heading($heading-background-color2);
     border-radius: 1em;
   }
 }
+.participation {
+  background: linear-gradient(to bottom, $background-color2, 50%, #1b5992);
+}
+div.participation::before {
+  content: "";
+  width: 100%;
+  height: 300px;
+  display: inline-block;
+  position: absolute;
+  background-image: url("images/bubbles-right.svg");
+  background-position: top right 20px;
+  background-size: 200px 300px;
+  background-repeat: no-repeat;
+}
+.benefits {
+  background: linear-gradient(to bottom, #1b5992, 50%, $background-color3);
+}
+div.benefits::before {
+  content: "";
+  width: 100%;
+  height: 400px;
+  display: inline-block;
+  position: absolute;
+  background-image: url("images/bubbles-left.svg");
+  background-position: left 0 top 0;
+  background-size: 200px 300px;
+  background-repeat: no-repeat;
+}
+div.benefits::after {
+  content: "";
+  width: 100%;
+  height: 500px;
+  display: inline-block;
+  position: absolute;
+  background-image: url("images/fish-dark.svg");
+  background-position: right 60px top 250px;
+  background-size: 200px 200px;
+  background-repeat: no-repeat;
+  z-index: 1;
+}
 .requirements {
-  background-color: $background-color3;
-  @include atoms.set-font-colors($text-light, $underline-border-light);
+  // background-color: $background-color3;
+  background: linear-gradient(to bottom, $background-color3, 70%, $background-color3, $background-color4);
+  @include atoms.set-font-colors($text-light, $underline-border-light, $sun-color, $sun-color);
   h3 {
     @include atoms.section-heading($heading-background-color3);
     border-radius: 0.5em;
   }
   [role="contentinfo"] {
-    background-color: $background-color4;
-    @include atoms.set-font-colors($text-dark, $underline-border-dark);
-    margin-left: -1em;
-    margin-right: -1em;
+    // background-color: $background-color4;
+    @include atoms.set-font-colors($dark-purple, $dark-purple, $sun-color);
+    text-shadow: 3px -3px 0.75em #ffffff;
+    // margin-left: -1em;
+    // margin-right: -1em;
     margin-bottom: -1em;
     margin-top: 1em;
     padding: 1em;
+    font-weight: bold;
+  }
+  &::before {
+    content: "";
+    width: 100%;
+    height: 800px;
+    display: inline-block;
+    position: absolute;
+    background-image: url("images/sand-castle-dark.svg");
+    background-position-x: center;
+    background-position-y: 630px;
+    background-size: 200px 200px;
+    background-repeat: no-repeat;
+  }
+  &::after {
+    content: "";
+    width: 100%;
+    height: 200px;
+    display: inline-block;
+    position: absolute;
+    background-image: url("images/starfish.svg");
+    background-position: right 50px top;
+    background-size: 150px 150px;
+    background-repeat: no-repeat;
   }
 }
 footer {
@@ -84,7 +227,8 @@ footer {
   h3 {
     font-size: $heading-sidebar-size;
   }
+  // display: flex;
   @media (min-width: $wide-screen-width) {
-    background-color: $background-color1;
+    // background-color: $background-color1;
   }
 }
