--- a/_molecules.scss
+++ b/_molecules.scss
@@ -26,8 +26,10 @@
   }
 }
 .intro p, .summary p, .preamble p, .explanation p, .participation p, .benefits p, .requirements p, .intro h3, .summary h3, .preamble h3, .explanation h3, .participation h3, .benefits h3, .requirements h3, footer {
-  width: $text-area-width;
   margin: 0 auto;
+  @media (min-width: $wide-screen-width) {
+    width: $text-area-width;
+  }
 }
 // .design-selection h3, .design-archives h3, .zen-resources h3 {
 //   text-align: center;
@@ -191,17 +193,20 @@ div.benefits::after {
     padding: 1em;
     font-weight: bold;
   }
-  &::before {
-    content: "";
-    width: 100%;
-    height: 800px;
-    display: inline-block;
-    position: absolute;
-    background-image: url("images/sand-castle-dark.svg");
-    background-position-x: center;
-    background-position-y: 630px;
-    background-size: 200px 200px;
-    background-repeat: no-repeat;
+  
+  @media (min-width: $wide-screen-width) {
+    &::before {
+      content: "";
+      width: 100%;
+      height: 800px;
+      display: inline-block;
+      position: absolute;
+      background-image: url("images/sand-castle-dark.svg");
+      background-position-x: center;
+      background-position-y: 630px;
+      background-size: 200px 200px;
+      background-repeat: no-repeat;
+    }
   }
   &::after {
     content: "";
