--- a/_variables.scss
+++ b/_variables.scss
@@ -2,9 +2,6 @@
 
 $fonts-headline: Dangrek, "Arial Narrow", Arial, Verdana, sans-serif;
 $fonts-body: Karla, Verdana, Arial, sans-serif;
-$primary: #77c4d3;
-$accent1: #ea2e49;
-$accent2: rgba(246, 247, 146, 0.9);
 $grey-sidebar: rgba(51, 55, 69, 0.9);
 $text-dark: #000;
 $text-light: #fff;
@@ -13,12 +10,12 @@ $background-color1: #D9F0FF;
 $background-color2: #427AA1;
 $background-color3: #064789;
 $background-color4: #FFD6BA;
-$heading-background-color0: #fff;
 $heading-background-color1: #AB9DFF;
 $heading-background-color2: #60FFBC;
 $heading-background-color3: #FF8383;
 $sun-color: #FFCD19;
-$cloud-color: #fff;
+$example-files-background-color: #ffcd1960;
+$cloud-color: #f2f2f2;
 $fish-color: #FF4C00;
 $bubble-color: #379FBD;
 $red-text-shadow: #ee0000;
