Add authors to stylesheet.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* Authors: "Sea Depths" CSS Zen Garden project by Timothy Bohman. Former team members with whom the site theme and overall look were chosen: Ella Galbraith (contributed the initial design on which this project is based) and Kevin Kirby. */
 @import url("https://fonts.googleapis.com/css2?family=Dangrek&family=Karla:ital,wght@0,200..800;1,200..800&display=swap");
 h1,
 h2,
