--- a/_molecules.scss
+++ b/_molecules.scss
@@ -78,16 +78,19 @@ header[role="banner"]::before {
   position: relative;
   z-index: 2;
 }
-div.preamble::before {
-  content: "";
-  width: 100%;
-  height: 450px;
-  display: inline-block;
-  position: absolute;
-  background-image: url("images/sailboat.svg");
-  background-position: left 0 top 240px;
-  background-size: 150px 150px;
-  background-repeat: no-repeat;
+
+@media (min-width: $wide-screen-width) {
+  div.preamble::before {
+    content: "";
+    width: 100%;
+    height: 450px;
+    display: inline-block;
+    position: absolute;
+    background-image: url("images/sailboat.svg");
+    background-position: left 0 top 240px;
+    background-size: 150px 150px;
+    background-repeat: no-repeat;
+  }
 }
 .explanation {
   background-color: $background-color2;
