--- a/style.css
+++ b/style.css
@@ -208,18 +208,19 @@ header[role=banner]::before {
   z-index: 2;
 }
 
-div.preamble::before {
-  content: "";
-  width: 100%;
-  height: 450px;
-  display: inline-block;
-  position: absolute;
-  background-image: url("images/sailboat.svg");
-  background-position: left 0 top 240px;
-  background-size: 150px 150px;
-  background-repeat: no-repeat;
+@media (min-width: 816px) {
+  div.preamble::before {
+    content: "";
+    width: 100%;
+    height: 450px;
+    display: inline-block;
+    position: absolute;
+    background-image: url("images/sailboat.svg");
+    background-position: left 0 top 240px;
+    background-size: 150px 150px;
+    background-repeat: no-repeat;
+  }
 }
-
 .explanation {
   background-color: #427AA1;
   color: #fff;
