--- a/_variables.scss
+++ b/_variables.scss
@@ -25,10 +25,14 @@ $text-body-size: 20px;
 $text-area-width: 40em;
 $heading1-size: 2.75rem;
 $heading2-size: 2rem;
+$heading2-size-smallest-screen: 1.8rem;
 $heading3-size: 2.25rem;
+$heading3-size-smallest-screen: 1.8rem;
 $heading4-size: 1.5rem;
 $heading-sidebar-size: 1.25rem;
 $sidebar-font-size: 0.8rem;
 $underline-border-light: rgba(255, 255, 255, 0.5);
 $underline-border-dark: rgba(0, 0, 0, 0.5);
+$smallest-screen-width: 320px;
+$small-medium-screen-width: 520px;
 $wide-screen-width: 816px;
