--- a/_molecules.scss
+++ b/_molecules.scss
@@ -10,8 +10,14 @@
     @include atoms.uppercase($text-dark);
     @include atoms.section-heading($sun-color);
     border-radius: 100%;
-    min-width: 475px;
-    height: 475px;
+    min-width: 258px;
+    height: 258px;
+    max-width: 258px;
+    @media (min-width: $small-medium-screen-width) {
+      min-width: 475px;
+      height: 475px;
+      max-width: 475px;
+    }
     display: grid;
     grid-column: 1 / 1;
     justify-items: center;
@@ -22,10 +28,18 @@
     border-radius: 50%;
   }
 }
-.intro p, .summary p, .preamble p, .explanation p, .participation p, .benefits p, .requirements p, .intro h3, .summary h3, .preamble h3, .explanation h3, .participation h3, .benefits h3, .requirements h3, footer {
-  margin: 0 auto;
-  @media (min-width: $wide-screen-width) {
-    width: $text-area-width;
+.intro p, .summary p, .preamble p, .explanation p, .participation p, .benefits p, .requirements p, .intro h3, .summary h3, .preamble h3, .explanation h3, .participation h3, .benefits h3, .requirements h3 {
+  position: relative;
+  z-index: 2;
+  &, footer {
+    margin: 0 auto;
+    @media (min-width: $small-medium-screen-width) {
+      min-width: fit-content;
+    }
+    @media (min-width: $wide-screen-width) {
+      width: $text-area-width;
+      min-width: 0;
+    }
   }
 }
 .intro {
@@ -34,27 +48,29 @@
   margin: 0;
   padding: 1em;
 }
-section.intro::before {
-  content: "";
-  width: 100%;
-  height: 500px;
-  display: inline-block;
-  position: absolute;
-  background-image: url("images/cloud.svg");
-  background-position: top 0px right 60px;
-  background-size: 250px 250px;
-  background-repeat: no-repeat;
-}
-header[role="banner"]::before {
-  content: "";
-  width: 100%;
-  height: 500px;
-  display: inline-block;
-  position: absolute;
-  background-image: url("images/cloud.svg");
-  background-position: top 240px left 240px;
-  background-size: 250px 250px;
-  background-repeat: no-repeat;
+@media (min-width: $small-medium-screen-width) {
+  section.intro::before {
+    content: "";
+    width: 100%;
+    height: 500px;
+    display: inline-block;
+    position: absolute;
+    background-image: url("images/cloud.svg");
+    background-position: top 0px right 60px;
+    background-size: 250px 250px;
+    background-repeat: no-repeat;
+  }
+  header[role="banner"]::before {
+    content: "";
+    width: 100%;
+    height: 500px;
+    display: inline-block;
+    position: absolute;
+    background-image: url("images/cloud.svg");
+    background-position: top 240px left 240px;
+    background-size: 250px 250px;
+    background-repeat: no-repeat;
+  }
 }
 .main>div, .main>footer {
   padding: 1em;
@@ -184,6 +200,7 @@ div.benefits::after {
     background-position: right 50px top;
     background-size: 150px 150px;
     background-repeat: no-repeat;
+    z-index: 1;
   }
 }
 footer {
