--- a/style.css
+++ b/style.css
@@ -18,19 +18,34 @@ h1 {
 
 h2 {
   color: #000;
-  font-size: 2rem;
+  font-size: 1.8rem;
   letter-spacing: 1px;
   line-height: 1em;
 }
 
 h3 {
-  font-size: 2.25rem;
+  font-size: 1.8rem;
   font-weight: 200; /* Thin */
   letter-spacing: 1px;
   line-height: 1em;
   padding: 0.5em 0 0.25em 0;
 }
 
+@media (min-width: 520px) {
+  h2 {
+    color: #000;
+    font-size: 2rem;
+    letter-spacing: 1px;
+    line-height: 1em;
+  }
+  h3 {
+    font-size: 2.25rem;
+    font-weight: 200; /* Thin */
+    letter-spacing: 1px;
+    line-height: 1em;
+    padding: 0.5em 0 0.25em 0;
+  }
+}
 h4 {
   font-size: 1.5rem;
   font-weight: 200; /* Thin */
@@ -90,12 +105,20 @@ ul li {
   max-width: -moz-fit-content;
   max-width: fit-content;
   border-radius: 100%;
-  min-width: 475px;
-  height: 475px;
+  min-width: 258px;
+  height: 258px;
+  max-width: 258px;
   display: grid;
   grid-column: 1/1;
   justify-items: center;
   align-items: center;
+}
+@media (min-width: 520px) {
+  [role=banner] > h1 {
+    min-width: 475px;
+    height: 475px;
+    max-width: 475px;
+  }
 }
 [role=banner] h2 {
   color: #000;
@@ -109,12 +132,23 @@ ul li {
   border-radius: 50%;
 }
 
-.intro p, .summary p, .preamble p, .explanation p, .participation p, .benefits p, .requirements p, .intro h3, .summary h3, .preamble h3, .explanation h3, .participation h3, .benefits h3, .requirements h3, footer {
+.intro p, .summary p, .preamble p, .explanation p, .participation p, .benefits p, .requirements p, .intro h3, .summary h3, .preamble h3, .explanation h3, .participation h3, .benefits h3, .requirements h3 {
+  position: relative;
+  z-index: 2;
+}
+.intro p, .intro p footer, .summary p, .summary p footer, .preamble p, .preamble p footer, .explanation p, .explanation p footer, .participation p, .participation p footer, .benefits p, .benefits p footer, .requirements p, .requirements p footer, .intro h3, .intro h3 footer, .summary h3, .summary h3 footer, .preamble h3, .preamble h3 footer, .explanation h3, .explanation h3 footer, .participation h3, .participation h3 footer, .benefits h3, .benefits h3 footer, .requirements h3, .requirements h3 footer {
   margin: 0 auto;
 }
+@media (min-width: 520px) {
+  .intro p, .intro p footer, .summary p, .summary p footer, .preamble p, .preamble p footer, .explanation p, .explanation p footer, .participation p, .participation p footer, .benefits p, .benefits p footer, .requirements p, .requirements p footer, .intro h3, .intro h3 footer, .summary h3, .summary h3 footer, .preamble h3, .preamble h3 footer, .explanation h3, .explanation h3 footer, .participation h3, .participation h3 footer, .benefits h3, .benefits h3 footer, .requirements h3, .requirements h3 footer {
+    min-width: -moz-fit-content;
+    min-width: fit-content;
+  }
+}
 @media (min-width: 816px) {
-  .intro p, .summary p, .preamble p, .explanation p, .participation p, .benefits p, .requirements p, .intro h3, .summary h3, .preamble h3, .explanation h3, .participation h3, .benefits h3, .requirements h3, footer {
+  .intro p, .intro p footer, .summary p, .summary p footer, .preamble p, .preamble p footer, .explanation p, .explanation p footer, .participation p, .participation p footer, .benefits p, .benefits p footer, .requirements p, .requirements p footer, .intro h3, .intro h3 footer, .summary h3, .summary h3 footer, .preamble h3, .preamble h3 footer, .explanation h3, .explanation h3 footer, .participation h3, .participation h3 footer, .benefits h3, .benefits h3 footer, .requirements h3, .requirements h3 footer {
     width: 40em;
+    min-width: 0;
   }
 }
 
@@ -136,30 +170,30 @@ ul li {
   text-shadow: 3px -3px 0.75em #FF4C00;
 }
 
-section.intro::before {
-  content: "";
-  width: 100%;
-  height: 500px;
-  display: inline-block;
-  position: absolute;
-  background-image: url("images/cloud.svg");
-  background-position: top 0px right 60px;
-  background-size: 250px 250px;
-  background-repeat: no-repeat;
+@media (min-width: 520px) {
+  section.intro::before {
+    content: "";
+    width: 100%;
+    height: 500px;
+    display: inline-block;
+    position: absolute;
+    background-image: url("images/cloud.svg");
+    background-position: top 0px right 60px;
+    background-size: 250px 250px;
+    background-repeat: no-repeat;
+  }
+  header[role=banner]::before {
+    content: "";
+    width: 100%;
+    height: 500px;
+    display: inline-block;
+    position: absolute;
+    background-image: url("images/cloud.svg");
+    background-position: top 240px left 240px;
+    background-size: 250px 250px;
+    background-repeat: no-repeat;
+  }
 }
-
-header[role=banner]::before {
-  content: "";
-  width: 100%;
-  height: 500px;
-  display: inline-block;
-  position: absolute;
-  background-image: url("images/cloud.svg");
-  background-position: top 240px left 240px;
-  background-size: 250px 250px;
-  background-repeat: no-repeat;
-}
-
 .main > div, .main > footer {
   padding: 1em;
 }
@@ -378,6 +412,7 @@ div.benefits::after {
   background-position: right 50px top;
   background-size: 150px 150px;
   background-repeat: no-repeat;
+  z-index: 1;
 }
 
 footer {
@@ -436,6 +471,7 @@ footer a:hover {
 html {
   background-color: #064789;
   font-size: 20px;
+  min-width: 320px;
 }
 
 body {
