Reduce opacity of heading backgrounds.

--- a/_variables.scss
+++ b/_variables.scss
@@ -12,9 +12,9 @@ $background-color1: #D9F0FF;
 $background-color2: #427AA1;
 $background-color3: #064789;
 $background-color4: #FFD6BA;
-$heading-background-color1: #AB9DFF;
-$heading-background-color2: #60FFBC;
-$heading-background-color3: #FF8383;
+$heading-background-color1: #ac9dffd0;
+$heading-background-color2: #60ffbdd0;
+$heading-background-color3: #ff8383d0;
 $sun-color: #FFCD19;
 $example-files-background-color: #ffcd1960;
 $cloud-color: #f2f2f2;
