--- a/_molecules.css
+++ b/_molecules.css
@@ -82,7 +82,7 @@ abbr[title] {
 }
 
 abbr[title]:hover {
-  border-bottom: 4px solid white;
+  border-bottom: 4px dotted white;
 }
 
 ul li {
@@ -186,7 +186,7 @@ ul li {
   text-decoration: none;
 }
 .intro abbr[title]:hover {
-  border-bottom: 4px dashed #FF4C00;
+  border-bottom: 4px dotted #FF4C00;
 }
 
 @media (min-width: 520px) {
@@ -246,11 +246,11 @@ ul li {
   text-decoration: none;
 }
 .preamble abbr[title]:hover, .explanation abbr[title]:hover {
-  border-bottom: 4px dashed #8a007e;
+  border-bottom: 4px dotted #8a007e;
 }
 .preamble h3, .explanation h3 {
   color: #000;
-  background-color: rgba(172, 157, 255, 0.8156862745);
+  background-color: rgba(172, 157, 255, 0.8901960784);
   padding-left: 0.5em;
   padding-right: 0.5em;
   padding-top: 0.3em;
@@ -303,7 +303,7 @@ ul li {
   text-decoration: none;
 }
 .explanation abbr[title]:hover {
-  border-bottom: 4px dashed #FFCD19;
+  border-bottom: 4px dotted #FFCD19;
 }
 
 .participation, .benefits {
@@ -327,11 +327,11 @@ ul li {
   text-decoration: none;
 }
 .participation abbr[title]:hover, .benefits abbr[title]:hover {
-  border-bottom: 4px dashed #FFCD19;
+  border-bottom: 4px dotted #FFCD19;
 }
 .participation h3, .benefits h3 {
   color: #000;
-  background-color: rgba(96, 255, 189, 0.8156862745);
+  background-color: rgba(96, 255, 189, 0.8901960784);
   padding-left: 0.5em;
   padding-right: 0.5em;
   padding-top: 0.3em;
@@ -407,11 +407,11 @@ div.benefits::after {
   text-decoration: none;
 }
 .requirements abbr[title]:hover {
-  border-bottom: 4px dashed #FFCD19;
+  border-bottom: 4px dotted #FFCD19;
 }
 .requirements h3 {
   color: #000;
-  background-color: rgba(255, 131, 131, 0.8156862745);
+  background-color: rgba(255, 131, 131, 0.8901960784);
   padding-left: 0.5em;
   padding-right: 0.5em;
   padding-top: 0.3em;
@@ -445,7 +445,7 @@ div.benefits::after {
   text-decoration: none;
 }
 .requirements [role=contentinfo] abbr[title]:hover {
-  border-bottom: 4px dashed #8a007e;
+  border-bottom: 4px dotted #8a007e;
 }
 @media (min-width: 816px) {
   .requirements::before {
@@ -495,5 +495,5 @@ footer abbr[title] {
   text-decoration: none;
 }
 footer abbr[title]:hover {
-  border-bottom: 4px dashed #8a007e;
+  border-bottom: 4px dotted #8a007e;
 }
